--- a/ansible/roles/python/tasks/main.yml
+++ b/ansible/roles/python/tasks/main.yml
@@ -2,12 +2,21 @@
     - name: Get aptitude for upgrade
       apt: pkg=aptitude state=present 
 
-    - name: grab build dependencies for numpy and scipy
-      command: apt-get -y  python-pip build-dep python-scipy liblapack-dev libopenblas-dev gfortran libpython3-dev build-essential pkg-config 
-      
     - name: Safe system upgrade via aptitude
       apt: upgrade=safe
 
+    - name: Grab python dependencies
+      apt: name={{item}} state=installed
+      with_items:
+        - python-pip
+        - python-scipy
+        - liblapack-dev
+        - libopenblas-dev
+        - gfortran
+        - libpython3-dev
+        - build-essential
+        - pkg-config
+ 
     - name: Install global python requirements
       pip: name={{item}} state=present
       with_items:
